Add customised UI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@layer base {
+  body {
+    @apply font-primary bg-primary text-white leading-loose;
+  }
+  :root {
+    --radius: 0.5rem;
+  }
 }
 
 *,
@@ -13,19 +17,6 @@
   border-width: 0;
   border-style: solid;
   border-color: theme("borderColor.DEFAULT", currentColor);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
@@ -59,7 +50,6 @@ iframe,
 embed,
 object {
   display: block;
-  vertical-align: middle;
 }
 
 img,
