--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,15 @@
     @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
   }
 
+  .text-outline {
+    -webkit-text-stroke: 1px #fff;
+  }
+
+  .text-outline-hover {
+    -webkit-text-stroke: 1px #00ff99;
+  }
+
+
   :root {
     --radius: 0.5rem;
   }
